Test W1_PhC_wvg PCell. Squash small bug in javafx path.

--- a/quick_test.ipynb
+++ b/quick_test.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gdsfactory as gf\n",
-    "import cnst"
+    "import cnst\n",
+    "from photonic import W1_PhC_wvg"
    ]
   },
   {
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +33,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Saved to: /Users/lanmai/congenial-broccoli/gds/test.gds\n",
+      "Saved to: /Users/lanmai/congenial-broccoli/gds/W1_PhC_wvg.gds\n",
       "\n",
       "Please acknowledge the Nanolithography Toolbox by including the following reference:\n",
       "\n",
@@ -45,18 +46,14 @@
       "Warning: Off-grid AREF row vector - AREF will be split into subarrays to preserve locations (position=568, record number=25, cell=phCV)\n",
       "Warning: Off-grid AREF row vector - AREF will be split into subarrays to preserve locations (position=632, record number=31, cell=phCV)\n",
       "Warning: Off-grid AREF row vector - AREF will be split into subarrays to preserve locations (position=696, record number=37, cell=phCV)\n",
-      "\u001b[32m2024-09-06 15:33:55.414\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mkfactory.kcell\u001b[0m:\u001b[36mshow\u001b[0m:\u001b[36m7894\u001b[0m - \u001b[1mklive v0.3.3: Opened file '/Users/lanmai/congenial-broccoli/build/gds/854475795.oas'\u001b[0m\n",
-      "\u001b[32m2024-09-06 15:33:55.423\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36mkfactory.kcell\u001b[0m:\u001b[36mshow\u001b[0m:\u001b[36m7940\u001b[0m - \u001b[33m\u001b[1mKLayout GUI version is older than the python klayout.GUI:0.28.13 Python:0.29.5. This might cause missing,unfunctional, or erroneous features. Please update your GUI to a version equal or higher than the python version for optimal performance.\u001b[0m\n"
+      "\u001b[32m2024-09-09 11:24:41.302\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mkfactory.kcell\u001b[0m:\u001b[36mshow\u001b[0m:\u001b[36m7894\u001b[0m - \u001b[1mklive v0.3.3: Opened file '/Users/lanmai/congenial-broccoli/build/gds/1913611382.oas'\u001b[0m\n",
+      "\u001b[32m2024-09-09 11:24:41.306\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36mkfactory.kcell\u001b[0m:\u001b[36mshow\u001b[0m:\u001b[36m7940\u001b[0m - \u001b[33m\u001b[1mKLayout GUI version is older than the python klayout.GUI:0.28.13 Python:0.29.5. This might cause missing,unfunctional, or erroneous features. Please update your GUI to a version equal or higher than the python version for optimal performance.\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "c = cnst.cnst_to_gf('cnst_scripts/W1_PhC_wvg.cnst',\n",
-    "                    'CNSTNanolithographyToolboxV2016.10.01.jar',\n",
-    "                    '~/javafx-sdk-22.0-2.2/lib',\n",
-    "                    'test.gds')\n",
+    "c = W1_PhC_wvg()\n",
     "\n",
-    "c.flatten()\n",
     "c.show()"
    ]
   }
