Remove ring resonator. Implement 2D PhC hex lattice using only gf.

--- a/quick_test.ipynb
+++ b/quick_test.ipynb
@@ -6,7 +6,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gdsfactory as gf"
+    "import gdsfactory as gf\n",
+    "import photonic as pc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-09-10 15:30:14.419\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mkfactory.kcell\u001b[0m:\u001b[36mshow\u001b[0m:\u001b[36m7900\u001b[0m - \u001b[1mklive v0.3.3: Reloaded file '/Users/lanmai/congenial-broccoli/build/gds/1154697254.oas'\u001b[0m\n",
+      "\u001b[32m2024-09-10 15:30:14.421\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36mkfactory.kcell\u001b[0m:\u001b[36mshow\u001b[0m:\u001b[36m7940\u001b[0m - \u001b[33m\u001b[1mKLayout GUI version is older than the python klayout.GUI:0.28.13 Python:0.29.5. This might cause missing,unfunctional, or erroneous features. Please update your GUI to a version equal or higher than the python version for optimal performance.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = pc.PhC_2D_hex_lattice(0.065, 0.294, 1, 5, 5)\n",
+    "c.show()"
    ]
   }
  ],
@@ -26,7 +46,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
