Implement L3 cavity PCell.

--- a/quick_test.ipynb
+++ b/quick_test.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import math\n",
-    "from components.PhC_wvg_hex_lattice import PhC_wvg_hex_lattice"
+    "from components.L3_cavity import L3_cavity"
    ]
   },
   {
@@ -19,34 +19,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-09-10 18:46:32.699\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mkfactory.kcell\u001b[0m:\u001b[36mshow\u001b[0m:\u001b[36m7894\u001b[0m - \u001b[1mklive v0.3.3: Opened file '/Users/lanmai/udnf35photonic/build/gds/2050357953.oas'\u001b[0m\n",
-      "\u001b[32m2024-09-10 18:46:32.704\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36mkfactory.kcell\u001b[0m:\u001b[36mshow\u001b[0m:\u001b[36m7940\u001b[0m - \u001b[33m\u001b[1mKLayout GUI version is older than the python klayout.GUI:0.28.13 Python:0.29.5. This might cause missing,unfunctional, or erroneous features. Please update your GUI to a version equal or higher than the python version for optimal performance.\u001b[0m\n"
+      "\u001b[32m2024-09-11 17:24:22.482\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mkfactory.kcell\u001b[0m:\u001b[36mshow\u001b[0m:\u001b[36m7894\u001b[0m - \u001b[1mklive v0.3.3: Opened file '/Users/lanmai/udnf35photonic/build/gds/612396676.oas'\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "c = PhC_wvg_hex_lattice(0.065, 0.294, 1, 5, 5, 1, 'a')\n",
+    "c = L3_cavity(r=0.065, a=0.294, angle_resolution=1, n_rows=1, n_holes=20)\n",
     "c.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5092229374252498"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0.294*math.sqrt(3)"
    ]
   }
  ],
