Revert to placing components into separate py files.

--- a/quick_test.ipynb
+++ b/quick_test.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import math\n",
-    "from components.L3_cavity import L3_cavity"
+    "import activate_pdk"
    ]
   },
   {
