Implement 2xL3 coupled cavity PCell.

--- a/quick_test.ipynb
+++ b/quick_test.ipynb
@@ -6,16 +6,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
-    "import activate_pdk"
+    "import gdsfactory as gf\n",
+    "from components.L3_double import L3_double"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-09-12 17:15:27.394\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mkfactory.kcell\u001b[0m:\u001b[36mshow\u001b[0m:\u001b[36m7900\u001b[0m - \u001b[1mklive v0.3.3: Reloaded file '/Users/lanmai/udnf35photonic/build/gds/580450770.oas'\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = L3_double()\n",
+    "c.show()"
+   ]
   }
  ],
  "metadata": {
